Ajustes nas classes de produto